# websocket-std

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  stats.md
c/: README.md  build.sh  main  main.c  run.sh  run_thread.sh  server.py  thread  thread.c
c/websocket/: websocket-std.h
examples/: Cargo.toml  client.py  client.rs  handshake.py  server.py  simple_client.rs  simple_tls_client.rs  socket_client.py  socket_server.py  thread_client.rs
examples/http/: main.js  make_http_request.py  package.json
ffi/: README.md
ffi/xtensa-esp32-espidf/: README.md
websocket/: Cargo.toml  README.md  __build.rs  cbindgen.toml  websocket-std.h
websocket/src/: client.rs  extension.rs  lib.rs  main.rs  result.rs
websocket/src/core/: binary.rs  mod.rs  net.rs  test.rs  traits.rs
websocket/src/ffi/: common.rs  mod.rs  syncClient.rs
websocket/src/ffi/sync/: client.rs
websocket/src/http/: commons.rs  mod.rs  request.rs  response.rs
websocket/src/sync/: client.rs  mod.rs  tls_client.rs
websocket/src/ws_basic/: frame.rs  header.rs  key.rs  mask.rs  mod.rs  status_code.rs  test.rs
websocket/tests/: mod.rs  sync_client.rs
