[package]
name = "examples"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["Alejandro Palomino <alejandropalomino22@gmail.com>"]

[[example]]
name = "thread_client"
path = "thread_client.rs"

[[example]]
name = "simple_client"
path = "simple_client.rs"

[[example]]
name = "simple_tls_client"
path = "simple_tls_client.rs"

[dev-dependencies]
websocket-std = { version = "0.0.6", path = "../websocket" }