[package]
name = "websocket-std"
version = "0.0.3"
edition = "2021"
authors = ["Alejandro Palomino <alejandropalomino22@gmail.com>"]
rust-version = "1.65.0"

license = "MIT"
readme = "../README.md"
repository = "https://github.com/alekay2200/websocket-std"
description = """
Websocket implementation using std support. You can use this library in projects where the std support exists like rust for esp32 with std support (https://esp-rs.github.io/book/overview/using-the-standard-library.html).
The library implement a ffi interface to be used by C or C++ code, meaning that you can compile the code as a static library and use in any C or C++ project.
"""

categories = ["embedded"]
keywords = ["http", "async", "web"]


[dependencies]
bitflags = "2.3.2"
getrandom = "0.2.11"
base64 = "0.10.1"
sha1_smol = "1.0.0"