[package]
name = "websocket-std"
version = "0.0.3"
edition = "2021"
authors = ["Alejandro Palomino <alejandropalomino22@gmail.com>"]
rust-version = "1.65.0"

include = [
    "src/",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

license = "MIT"
readme = "README.md"
homepage = "https://github.com/alekay2200/websocket-std"
repository = "https://github.com/alekay2200/websocket-std"
description = """
Websocket implementation using std support, focus on microcontrollers and interoperability with other languages like C through the ffi. 
"""

categories = ["embedded"]
keywords = ["http", "async", "web"]


[dependencies]
bitflags = "2.3.2"
getrandom = "0.2.11"
base64 = "0.10.1"
sha1_smol = "1.0.0"